--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ darkmode: false
 github_username:  PabloMtzArec
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
-facebook_username: jekyll
+facebook_username: profile.php?id=100006377070174
 # flickr_username: jekyll
 instagram_username: pablomtzarec
 # linkedin_username: jameswgrant
@@ -30,10 +30,10 @@ youtube_username: pablomtza
 # orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
-additional_links:
-- title: itsgoingto.be
-  icon: fas fa-globe
-  url: https://www.itsgoingto.be
+#additional_links:
+#- title: itsgoingto.be
+#  icon: fas fa-globe
+#  url: https://www.itsgoingto.be
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
 #   url: Link url (eg. https://google.com)
@@ -48,7 +48,7 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
+  Hola soy Pablo! Estoy inmerso en el mundo de la Ingeniería en Informática estudiando actualmente en la Universidad de Guadalajara (UdeG). Desde que comencé este viaje, he encontrado en la informática un universo infinitamente creativo y desafiante.
 
   I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
 
