--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Pablo Alejandro Martínez Aréchiga
-title: Estudiante de Ing. Informática en UdeG
+title: Estudiante de Ingeniería Informática en UdeG
 email: pablomtzarechiga@gmail.com
 website: https://github.com/PabloMtzArec
 
@@ -45,15 +45,15 @@ youtube_username: pablomtza
 # google_analytics: "UA-00000000-0"
 
 # About Section
-# about_title: About Me
+# about_title: Acerca de Mi
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   Hola soy Pablo! Estoy inmerso en el mundo de la Ingeniería en Informática estudiando actualmente en la Universidad de Guadalajara (UdeG). Desde que comencé este viaje, he encontrado en la informática un universo infinitamente creativo y desafiante.
 
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+  Soy bueno en los lenguajes: <mark>C++</mark> y <mark>Python</mark>
 
 content:
-  - title: Projects # Title for the section
+  - title: Proyectos # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
@@ -72,7 +72,7 @@ content:
         description: | # this will include new lines to allow paragraphs
           I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
 
-  - title: Experience # Title for the section
+  - title: Experiencia # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
@@ -86,7 +86,7 @@ content:
         description: | # this will include new lines to allow paragraphs
             Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
 
-  - title: Education # Title for the section
+  - title: Educación # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
@@ -100,17 +100,13 @@ content:
 
           I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
 
-  - title: A Little More About Me
+  - title: Un Poco Más Acerca de Mi
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-      - Rock climbing
-      - Gaming
-      - Knitting
-      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
-
-      Look at this cool image  
-      ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
+      Además de mis intereses en programación e ingeniería de software, algunos de mis otros intereses y pasatiempos son:
+      - Editar Música
+      - Cantar y Bailar
+      - Jugar Videojuego
 
 # Footer
 footer_show_references: true
